Tue Apr 21 09:20:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (init_mkmf): needs default library path even if
	  cross compiling.

Sun Apr 19 14:31:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_cleanup): the order of local variables on stack is
	  undefined.  should use outermost VALUE for ruby_init_stack.

	* gc.c (rb_stack_growup_p): returns stack grows up.

	* gc.c (Init_stack, ruby_init_stack): allows volatile pointer.

Sat Apr 18 19:44:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (safe_mutex_lock): pthread_cleanup_push() must not be
	  inside parens.

Sat Apr 18 18:25:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_remove): stops timer thread unless other
	  threads exist.  [ruby-core:18444]

Thu Apr  9 11:11:10 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/nkf/nkf.c: RDoc typo fixed.  [ruby-core:23170]

Wed Apr  8 13:57:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (Logging.postpone): copy postponed output always.

Mon Apr  6 23:16:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (CFLAGS, CXXFLAGS): override with $cflags and
	  $cxxflags if not given.  [ruby-core:23130]

Fri Apr  3 18:37:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (Init_stack): use ruby_init_stack.  [ruby-dev:34350]

	* intern.h (Init_stack): make to call ruby_init_stack.

Fri Apr  3 18:35:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (fake.rb): creates with config.status.

	* template/fake.rb.in: extracted from Makefile.in.

	* configure.in (fake.rb): prefixed with $(arch)-.

Fri Apr  3 13:53:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (is_defined): made a volatile variable not to be
	  clobbered by longjmp.

Fri Apr  3 12:46:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: quotes arguments with spaces always.

Fri Apr  3 12:43:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
